Exibição da legenda realizado. Toggle realizado aparece apenas quando for edição.

--- a/src/dreams-wall/dreams-wall.component.html
+++ b/src/dreams-wall/dreams-wall.component.html
@@ -16,7 +16,7 @@
                   realizado!
                 </p>
               </div>
-              <div *ngIf="sonho.private">
+              <div *ngIf="ehPrivado(sonho)">
                 <p class="nome status">
                   <i class="fa fa-lock" style="color: #ff9a33;" aria-hidden="true"></i>
                   <!-- <i class="fa fa-eye" style="color: #ffc340;" aria-hidden="true"></i> -->
