--- a/src/navbar/navbar.component.css
+++ b/src/navbar/navbar.component.css
@@ -255,7 +255,7 @@ p{
   color:rgb(76, 45, 117);
   cursor: pointer;
   font-weight: 500;
-  letter-spacing: 1px;
+  /* letter-spacing: 1px; */
 }
 
 .usName{
