--- a/src/dreams-wall/dreams-wall.component.css
+++ b/src/dreams-wall/dreams-wall.component.css
@@ -31,7 +31,8 @@ p {
   float: left;
   padding: 10px;
   margin: 0 5px 0px;
-  font-family: 'Libre Baskerville', serif;
+  font-style: italic;
+  /* font-family: 'Libre Baskerville', serif; */
 }
 
 
