fix bug toggle private, regra 6 dig. na desc. do sonho, ajuste na img de fundo e css

--- a/src/dreams-wall/dreams-wall.component.css
+++ b/src/dreams-wall/dreams-wall.component.css
@@ -16,6 +16,8 @@
   overflow-x: scroll;
   background-image: url("../assets/muro_fundo.jpg");
   height: 90vh;
+  background-attachment: local;
+  background-size: contain;
 }
 
 
