--- a/src/register-dream/register-dream.component.html
+++ b/src/register-dream/register-dream.component.html
@@ -2,16 +2,16 @@
   <div class="item b"><img src="https://www.w3schools.com/howto/img_avatar.png" class="circleImg"></div>
   <div class="item a"><span>Registro de Sonho</span></div>
 </section>
-
   <h1 mat-dialog-title class="subTitle" >Before I Die</h1>
-
   <form novalidate [formGroup]="formUser" style="width: 100%;">
     <input matInput formControlName="id" style="visibility:hidden;">
     <mat-form-field class="fullWidth">
       <mat-label>Eu quero...</mat-label>
-      <input matInput type="text" formControlName="descricaoSonho" autocomplete="false">
+      <input matInput type="text" formControlName="descricaoSonho" autocomplete="false"> 
+      <button (click)="isEmojiPickerVisible = !isEmojiPickerVisible;" class="btn-emoji">😀</button>
       <mat-error *ngIf="formUser.get('descricaoSonho').invalid">é necessário ao menos 6 digitos</mat-error>
     </mat-form-field>
+    <emoji-mart [i18n]="{ search: 'Recherche', categories: { search: 'Résultats de recherche', recent: 'Récents' } }" class="emoji-mart" *ngIf="isEmojiPickerVisible" (emojiSelect)="addEmoji($event)" title="Choose your emoji"></emoji-mart>
     <div class="toggle">
       <p class="mp"> Público </p>
       <!-- <mat-slide-toggle formControlName="isPrivate" color="warn">{{state}}</mat-slide-toggle> -->
@@ -22,7 +22,6 @@
       <mat-slide-toggle formControlName="status" color="warn"> Realizado </mat-slide-toggle>
     </div>
   </form>
-
 <!-- <div mat-dialog-actions class="buttons"> -->
 <div class="buttons">
   <button mat-flat-button color="primary" class="buttons" (click)='RegitrarSonho()' [disabled]="this.formUser.invalid">
