--- a/src/dreams-wall/dreams-wall.component.css
+++ b/src/dreams-wall/dreams-wall.component.css
@@ -33,7 +33,7 @@ p {
   float: left;
   padding: 10px;
   margin: 0 5px 0px;
-  font-style: italic;
+  /* font-style: italic; */
   /* font-family: 'Libre Baskerville', serif; */
 }
 
