alansiqma: correcao no foco do sonho

--- a/src/dreams-wall/dreams-wall.component.css
+++ b/src/dreams-wall/dreams-wall.component.css
@@ -102,15 +102,12 @@ font-weight: bold;
   cursor: pointer;
   letter-spacing: 1.5px;
   color: rgb(253, 232, 206);
-  background: #bf3e3e;
   font-weight: 500;
+  border-width: medium;
+  border-style: dashed;
+  border-color:green;
 }
-.descricao-sonho-destaque > p{
-  background-color: #bf3e3e;
-}
-.descricao-sonho-destaque > div{
-  background-color: #bf3e3e;
-}
+
 .btAddDream:hover{
   color: #ffe371;
 }
