alansiqma: adicionando imagens e melhorando a identidade do nome

--- a/src/register-dream/register-dream.component.html
+++ b/src/register-dream/register-dream.component.html
@@ -1,8 +1,8 @@
 <section class="grid grid-template-areas-1">
-  <div class="item b"><img src="https://www.w3schools.com/howto/img_avatar.png" class="circleImg"></div>
-  <div class="item a"><span>Registro de Sonho</span></div>
+  <div class="item b"><img src="../assets/logo-bfd-2.png" class="circleImg"></div>
 </section>
-  <h1 mat-dialog-title class="subTitle" >Before I Die</h1>
+<div class="item a" style="color:#282d6c"><span>Registro de Sonho</span></div>
+  <!-- <h1 mat-dialog-title class="subTitle" >Before I Die</h1> -->
   <form novalidate [formGroup]="formUser" style="width: 100%;">
     <input matInput formControlName="id" style="visibility:hidden;">
     <mat-form-field class="fullWidth">
