--- a/src/navbar/navbar.component.html
+++ b/src/navbar/navbar.component.html
@@ -38,13 +38,13 @@
         <mat-form-field appearance="fill">
           <mat-label>Tema</mat-label>
           <mat-select (selectionChange)="alterarTema($event.value)">
-            <mat-option value="fundo-cinza-2.jpg">Tema 1</mat-option>
-            <mat-option value="fundo-cinza.jpg">Tema 2</mat-option>
-            <mat-option value="fundo-ceu.jpg">Tema 3</mat-option>
-            <mat-option value="fundo-imaginario.jpg">Tema 4</mat-option>
-            <mat-option value="fundo-realista.jpg">Tema 5</mat-option>
-            <mat-option value="fundo-realista-2.jpg">Tema 6</mat-option>
-            <mat-option value="muro_fundo.jpg">Tema 7</mat-option>
+            <mat-option value="fundo-cinza-2.jpg">Balloon Girl</mat-option>
+            <mat-option value="fundo-cinza.jpg">Floating Love</mat-option>
+            <mat-option value="fundo-ceu.jpg">Blue Sky</mat-option>
+            <mat-option value="fundo-imaginario.jpg">Blackboard</mat-option>
+            <mat-option value="fundo-realista.jpg">Realistic Wall 1</mat-option>
+            <mat-option value="fundo-realista-2.jpg">Realistic Wall 2</mat-option>
+            <!-- <mat-option value="muro_fundo.jpg">Tema 7</mat-option> -->
           </mat-select>
         </mat-form-field>
         <span class="subTitle link-1" (click)="IrParaMeusSonhos();">
