--- a/src/navbar/navbar.component.html
+++ b/src/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="nav">
-  <section class="grid grid-template-areas-2" *ngIf="!isLogged; else logged">
+  <section class="grid grid-template-areas-1" *ngIf="!isLogged; else logged">
     <div class="item a left">
       <img class="logo" [src]="logoBfd" (click)="IrParaHome()"/>
       <a href="https://forms.gle/A3afNJSrLFxCNRh78" target="_blank" class="byttons item-teste" mat-flat-button color="secundary">
@@ -8,32 +8,37 @@
           <i class="fa fa-commenting-o" aria-hidden="true"></i>
         </span>
       </a>
-    </div>
+    </div>  
     <div class="item right b item-teste">
         <span class="mt">
-        <button mat-flat-button color="primary" (click)="Logar()" class="buttons">
-          Sign-in
-            <span>
-              <i class="fa fa-sign-in"></i>
-            </span>
+          <button mat-flat-button color="primary" (click)="Logar()" class="buttons">
+            Sign-in
+            <span><i class="fa fa-sign-in"></i></span>
           </button>
         </span>
-      </div>
-      <div class="item grdPhoto item-outro-teste">
-        <button mat-raised-button (click)="drawer.toggle()">menu</button>
-      </div>
+    </div>
+    <div class="grdPhoto item-outro-teste grdPhoto-outro-teste">
+      <button mat-icon-button color="primary" (click)="drawer.toggle()" aria-label="Example icon button with a menu icon">
+        <mat-icon>menu</mat-icon>
+      </button>
+    </div>
   </section>
+
   <mat-drawer #drawer [mode]="mode.value" class="item-outro-teste">
-      <ul class="ul-menu">
-        <li>
-          <span class="subTitle link-1" (click)="IrParaMeusSonhos();">
+    <div *ngIf="isLogged">
+      <p>Ola  {{user.name}}
+      </p>
+    </div>
+      <ul class="menu">
+        <li *ngIf="isLogged">
+          <span class="subTitle link-1" (click)="IrParaMeusSonhos();drawer.toggle();">
             Meus Sonhos</span>
         </li>
         <li>
           <div class="">
             <mat-form-field appearance="fill">
               <mat-label>Tema</mat-label>
-              <mat-select (selectionChange)="alterarTema($event.value)">
+              <mat-select (selectionChange)="alterarTema($event.value);drawer.toggle()">
                 <mat-option value="fundo-cinza-2.jpg">Balloon Girl</mat-option>
                 <mat-option value="fundo-cinza.jpg">Floating Love</mat-option>
                 <mat-option value="fundo-ceu.jpg">Blue Sky</mat-option>
@@ -46,29 +51,34 @@
           </div>  
         </li>
         <li>
-          <a href="https://forms.gle/A3afNJSrLFxCNRh78" target="_blank" class="byttons"  mat-flat-button color="primary">
+          <a href="https://forms.gle/A3afNJSrLFxCNRh78" target="_blank" class="byttons"  mat-flat-button color="primary" (click)="drawer.toggle()">
             Feedback
             <span>
               <i class="fa fa-commenting-o" aria-hidden="true"></i>
             </span>
           </a> 
         </li>
-        <li *ngIf="isLogged">
-          <button  (click)="logOff()">
+        <li *ngIf="isLogged" >
+          <button  (click)="logOff();drawer.toggle()" mat-flat-button color="primary" class="buttons">
             Sair
-         
+            <span class="material-icons">
+              logout
+              </span>
           </button> 
         </li>
         <li *ngIf="!isLogged">
-          <button  (click)="Logar()">
-            Entrar
+          <button  (click)="Logar();drawer.toggle();" mat-flat-button color="primary" color="primary" class="buttons" >
+            Sign-in
+            <span>
+              <i class="fa fa-sign-in"></i>
+            </span>
           </button>
         </li>
       </ul>    
   </mat-drawer> 
 
   <mat-drawer-container class="example-container" [hasBackdrop]="hasBackdrop.value">
-  
+    
   </mat-drawer-container>
   
   <ng-template #logged>
@@ -115,10 +125,10 @@
           {{user.name}}
         </span>
       </div>
-      <div class="item grdPhoto item-outro-teste">
-        <button mat-raised-button (click)="drawer.toggle()"><span class="material-icons">
-          list
-          </span></button>
+      <div class="grdPhoto item-outro-teste grdPhoto-outro-teste">
+          <button mat-icon-button color="primary" (click)="drawer.toggle()" aria-label="Example icon button with a menu icon">
+            <mat-icon>menu</mat-icon>
+          </button>
       </div>
     </section>
   </ng-template>
