--- a/src/app/autenticate/autenticate.component.html
+++ b/src/app/autenticate/autenticate.component.html
@@ -1,8 +1,9 @@
-<h1 mat-dialog-title  class="extrabold inline titleRegister">
+<h1 mat-dialog-title  class="login extrabold inline titleRegister">
     <span class="iconRightButton">
       <i class="fa fa-user-o fa-1x" aria-hidden="true"></i>
     </span>
-    Login</h1>
+    Login
+  </h1>
   
   <ng-template #register>
     <span>
