--- a/src/app/initial-page/initial-page.component.html
+++ b/src/app/initial-page/initial-page.component.html
@@ -1,21 +1,21 @@
 <div class="grid-container">
-    <div class="">
-        <div style="text-align: center;">
+    <div class="item-1">
+        <div style="text-align: center;" class="div-logo">
             <img [src]="logoBfd" class="logo" />
         </div>
-        <div>
-            <p>Para se realizar um sonho é preciso busca-lo!</p>
-            <p>O Trilha Sonho ajuda você nessa busca!</p>
+        <div class="text-1">
+            <p>Para se realizar um sonho é preciso busca-lo!
+                O Trilha Sonho ajuda você nessa busca!</p>
         </div>
         <div>
             <p>Registre um sonho, receba apoio para trilhar o caminho, busque ajuda para realizar e ajude outras pessoas a atingirem também seus objetivos.</p>
         </div>
-        <div>
+        <div class="reference">
             <p>"Os sonhos existem para tornarem-se realidade."</p>
-            <p class="reference">Walt Disney</p>
+            <p>Walt Disney</p>
         </div>
     </div>
-    <div>
-     <app-autenticate (authEvent)="EventAuthEvent($event)" ></app-autenticate>
+    <div class="item-2">
+     <app-autenticate (authEvent)="EventAuthEvent($event)" class="autenticate"></app-autenticate>
     </div>
 </div>
