alansiqma: botao de adicionar e exluir tambem na pagina principal

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -30,7 +30,7 @@
         <span class="subTitle link-1" (click)="IrParaMeusSonhos();drawer.toggle();">
           Meus Sonhos</span>
       </div>
-      <div>
+      <div *ngIf="isLogged">
         <mat-form-field appearance="fill">
           <mat-label>Tema</mat-label>
           <mat-select (selectionChange)="alterarTema($event.value);drawer.toggle()">
