--- a/src/app/pages/dreams-wall/dreams-wall.component.html
+++ b/src/app/pages/dreams-wall/dreams-wall.component.html
@@ -34,7 +34,7 @@
               </div>
             </div>
 
-            <div *ngIf="ehMeuSonho">
+            <div *ngIf="ehMeuSonhoMetodh(sonho)">
               <p class="nome status" (click)='Editar(sonho)'>
                 <i class="fa fa-pencil" style="color: rgb(252, 206, 57);">
                   <span style="color: rgb(202, 202, 202);"> editar</span>
