alansiqma: nova linha com botão para excluir a propria linha

--- a/src/app/pages/register-dream/register-dream.component.html
+++ b/src/app/pages/register-dream/register-dream.component.html
@@ -29,7 +29,7 @@
     <div class="fullWidth">
       <mat-form-field>
         <mat-label>Tenho que fazer isso...</mat-label>
-        <input matInput formControlName="descricaoTrilha">
+        <input matInput formControlName="descricaoTrilha" autocomplete="false">
       </mat-form-field>
       <div class="fullWidth">
         <button mat-flat-button color="primary" class="btn-site" (click)="AdicionarTrilha()">Adicionar</button>
